fix badges being misaligned

--- a/release/main.css
+++ b/release/main.css
@@ -2413,6 +2413,10 @@ code.inline {
   min-width: 18px;
 }
 
+.upperBadge_cc5dd2 {
+  margin-top: 4px;
+}
+
 /* Create group dm */
 .popout_cba592 {
   background: transparent;
